Compilador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> imprimir_ fin_instruccion
Rule 5     instruccion -> declaracion_ins fin_instruccion
Rule 6     instruccion -> incre_decre_ins fin_instruccion
Rule 7     instruccion -> if_ins
Rule 8     instruccion -> while_ins
Rule 9     instruccion -> switch_ins
Rule 10    instruccion -> for_ins
Rule 11    instruccion -> main_ins
Rule 12    instruccion -> break_ins fin_instruccion
Rule 13    instruccion -> return_ins fin_instruccion
Rule 14    instruccion -> continue_ins fin_instruccion
Rule 15    instruccion -> funcion_ins
Rule 16    instruccion -> llamada_ins fin_instruccion
Rule 17    instruccion -> COMENTARIO_VARIAS_LINEAS
Rule 18    instruccion -> COMENTARIO_SIMPLE
Rule 19    declaracion_ins -> declaracion_
Rule 20    declaracion_ins -> declaracion_comp
Rule 21    declaracion_ins -> asignacion_ins
Rule 22    declaracion_for -> declaracion_comp
Rule 23    declaracion_for -> asignacion_ins
Rule 24    asignacion_for -> asignacion_ins
Rule 25    asignacion_for -> incre_decre_ins
Rule 26    instruccion -> error PUNTOCOMA
Rule 27    fin_instruccion -> PUNTOCOMA
Rule 28    fin_instruccion -> <empty>
Rule 29    declaracion_ -> tipo_funcion ID
Rule 30    declaracion_comp -> tipo_funcion ID IGUAL expresion
Rule 31    asignacion_ins -> ID IGUAL expresion
Rule 32    imprimir_ -> RPRINT PARA expresion PARC
Rule 33    if_ins -> RIF PARA expresion PARC LLAVEA instrucciones LLAVEC
Rule 34    if_ins -> RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE LLAVEA instrucciones LLAVEC
Rule 35    if_ins -> RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE if_ins
Rule 36    switch_ins -> RSWITCH PARA expresion PARC LLAVEA case_switch_ins default_switch LLAVEC
Rule 37    switch_ins -> RSWITCH PARA expresion PARC LLAVEA case_switch_ins LLAVEC
Rule 38    switch_ins -> RSWITCH PARA expresion PARC LLAVEA default_switch LLAVEC
Rule 39    case_switch_ins -> case_switch_ins case_switch
Rule 40    case_switch_ins -> case_switch
Rule 41    case_switch -> RCASE expresion DOSPUNTOS instrucciones
Rule 42    default_switch -> RDEFAULT DOSPUNTOS instrucciones
Rule 43    while_ins -> RWHILE PARA expresion PARC LLAVEA instrucciones LLAVEC
Rule 44    for_ins -> RFOR PARA declaracion_for PUNTOCOMA expresion PUNTOCOMA asignacion_for PARC LLAVEA instrucciones LLAVEC
Rule 45    main_ins -> RMAIN PARA PARC LLAVEA instrucciones LLAVEC
Rule 46    funcion_ins -> RFUNC ID PARA PARC LLAVEA instrucciones LLAVEC
Rule 47    funcion_ins -> RFUNC ID PARA parametros PARC LLAVEA instrucciones LLAVEC
Rule 48    parametros -> parametros COMA parametro
Rule 49    parametros -> parametro
Rule 50    parametro -> tipo_funcion ID
Rule 51    llamada_ins -> ID PARA PARC
Rule 52    llamada_ins -> ID PARA parametros_llamada PARC
Rule 53    parametros_llamada -> parametros_llamada COMA parametro_llamada
Rule 54    parametros_llamada -> parametro_llamada
Rule 55    parametro_llamada -> expresion
Rule 56    break_ins -> RBREAK
Rule 57    return_ins -> RRETURN expresion
Rule 58    continue_ins -> RCONTINUE
Rule 59    tipo_funcion -> RINT
Rule 60    tipo_funcion -> RDOUBLE
Rule 61    tipo_funcion -> RSTRING
Rule 62    tipo_funcion -> RCHAR
Rule 63    tipo_funcion -> RBOOLEAN
Rule 64    tipo_funcion -> RVAR
Rule 65    incre_decre_ins -> ID INCREMENTO
Rule 66    incre_decre_ins -> ID DECREMENTO
Rule 67    expresion -> expresion MAS expresion
Rule 68    expresion -> expresion MENOS expresion
Rule 69    expresion -> expresion POR expresion
Rule 70    expresion -> expresion DIV expresion
Rule 71    expresion -> expresion POT expresion
Rule 72    expresion -> expresion MODULO expresion
Rule 73    expresion -> expresion MENORQUE expresion
Rule 74    expresion -> expresion MENORIGUAL expresion
Rule 75    expresion -> expresion MAYORQUE expresion
Rule 76    expresion -> expresion MAYORIGUAL expresion
Rule 77    expresion -> expresion IGUALIGUAL expresion
Rule 78    expresion -> expresion DIFERENCIA expresion
Rule 79    expresion -> expresion AND expresion
Rule 80    expresion -> expresion OR expresion
Rule 81    expresion -> MENOS expresion
Rule 82    expresion -> NOT expresion
Rule 83    expresion -> PARA expresion PARC
Rule 84    expresion -> ID
Rule 85    expresion -> ENTERO
Rule 86    expresion -> DECIMAL
Rule 87    expresion -> CADENA
Rule 88    expresion -> CHAR
Rule 89    expresion -> RTRUE
Rule 90    expresion -> RFALSE
Rule 91    expresion -> RNULL
Rule 92    expresion -> llamada_ins
Rule 93    expresion -> PARA tipo_funcion PARC expresion
Rule 94    expresion -> RREAD PARA PARC

Terminals, with rules where they appear

AND                  : 79
CADENA               : 87
CHAR                 : 88
COMA                 : 48 53
COMENTARIO_SIMPLE    : 18
COMENTARIO_VARIAS_LINEAS : 17
DECIMAL              : 86
DECREMENTO           : 66
DIFERENCIA           : 78
DIV                  : 70
DOSPUNTOS            : 41 42
ENTERO               : 85
ID                   : 29 30 31 46 47 50 51 52 65 66 84
IGUAL                : 30 31
IGUALIGUAL           : 77
INCREMENTO           : 65
LLAVEA               : 33 34 34 35 36 37 38 43 44 45 46 47
LLAVEC               : 33 34 34 35 36 37 38 43 44 45 46 47
MAS                  : 67
MAYORIGUAL           : 76
MAYORQUE             : 75
MENORIGUAL           : 74
MENORQUE             : 73
MENOS                : 68 81
MODULO               : 72
NOT                  : 82
OR                   : 80
PARA                 : 32 33 34 35 36 37 38 43 44 45 46 47 51 52 83 93 94
PARC                 : 32 33 34 35 36 37 38 43 44 45 46 47 51 52 83 93 94
POR                  : 69
POT                  : 71
PUNTOCOMA            : 26 27 44 44
RBOOLEAN             : 63
RBREAK               : 56
RCASE                : 41
RCHAR                : 62
RCONTINUE            : 58
RDEFAULT             : 42
RDOUBLE              : 60
RELSE                : 34 35
RFALSE               : 90
RFOR                 : 44
RFUNC                : 46 47
RIF                  : 33 34 35
RINT                 : 59
RMAIN                : 45
RNULL                : 91
RPRINT               : 32
RREAD                : 94
RRETURN              : 57
RSTRING              : 61
RSWITCH              : 36 37 38
RTRUE                : 89
RVAR                 : 64
RWHILE               : 43
error                : 26

Nonterminals, with rules where they appear

asignacion_for       : 44
asignacion_ins       : 21 23 24
break_ins            : 12
case_switch          : 39 40
case_switch_ins      : 36 37 39
continue_ins         : 14
declaracion_         : 19
declaracion_comp     : 20 22
declaracion_for      : 44
declaracion_ins      : 5
default_switch       : 36 38
expresion            : 30 31 32 33 34 35 36 37 38 41 43 44 55 57 67 67 68 68 69 69 70 70 71 71 72 72 73 73 74 74 75 75 76 76 77 77 78 78 79 79 80 80 81 82 83 93
fin_instruccion      : 4 5 6 12 13 14 16
for_ins              : 10
funcion_ins          : 15
if_ins               : 7 35
imprimir_            : 4
incre_decre_ins      : 6 25
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2 33 34 34 35 41 42 43 44 45 46 47
llamada_ins          : 16 92
main_ins             : 11
parametro            : 48 49
parametro_llamada    : 53 54
parametros           : 47 48
parametros_llamada   : 52 53
return_ins           : 13
switch_ins           : 9
tipo_funcion         : 29 30 50 93
while_ins            : 8

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . imprimir_ fin_instruccion
    (5) instruccion -> . declaracion_ins fin_instruccion
    (6) instruccion -> . incre_decre_ins fin_instruccion
    (7) instruccion -> . if_ins
    (8) instruccion -> . while_ins
    (9) instruccion -> . switch_ins
    (10) instruccion -> . for_ins
    (11) instruccion -> . main_ins
    (12) instruccion -> . break_ins fin_instruccion
    (13) instruccion -> . return_ins fin_instruccion
    (14) instruccion -> . continue_ins fin_instruccion
    (15) instruccion -> . funcion_ins
    (16) instruccion -> . llamada_ins fin_instruccion
    (17) instruccion -> . COMENTARIO_VARIAS_LINEAS
    (18) instruccion -> . COMENTARIO_SIMPLE
    (26) instruccion -> . error PUNTOCOMA
    (32) imprimir_ -> . RPRINT PARA expresion PARC
    (19) declaracion_ins -> . declaracion_
    (20) declaracion_ins -> . declaracion_comp
    (21) declaracion_ins -> . asignacion_ins
    (65) incre_decre_ins -> . ID INCREMENTO
    (66) incre_decre_ins -> . ID DECREMENTO
    (33) if_ins -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC
    (34) if_ins -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE LLAVEA instrucciones LLAVEC
    (35) if_ins -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE if_ins
    (43) while_ins -> . RWHILE PARA expresion PARC LLAVEA instrucciones LLAVEC
    (36) switch_ins -> . RSWITCH PARA expresion PARC LLAVEA case_switch_ins default_switch LLAVEC
    (37) switch_ins -> . RSWITCH PARA expresion PARC LLAVEA case_switch_ins LLAVEC
    (38) switch_ins -> . RSWITCH PARA expresion PARC LLAVEA default_switch LLAVEC
    (44) for_ins -> . RFOR PARA declaracion_for PUNTOCOMA expresion PUNTOCOMA asignacion_for PARC LLAVEA instrucciones LLAVEC
    (45) main_ins -> . RMAIN PARA PARC LLAVEA instrucciones LLAVEC
    (56) break_ins -> . RBREAK
    (57) return_ins -> . RRETURN expresion
    (58) continue_ins -> . RCONTINUE
    (46) funcion_ins -> . RFUNC ID PARA PARC LLAVEA instrucciones LLAVEC
    (47) funcion_ins -> . RFUNC ID PARA parametros PARC LLAVEA instrucciones LLAVEC
    (51) llamada_ins -> . ID PARA PARC
    (52) llamada_ins -> . ID PARA parametros_llamada PARC
    (29) declaracion_ -> . tipo_funcion ID
    (30) declaracion_comp -> . tipo_funcion ID IGUAL expresion
    (31) asignacion_ins -> . ID IGUAL expresion
    (59) tipo_funcion -> . RINT
    (60) tipo_funcion -> . RDOUBLE
    (61) tipo_funcion -> . RSTRING
    (62) tipo_funcion -> . RCHAR
    (63) tipo_funcion -> . RBOOLEAN
    (64) tipo_funcion -> . RVAR

    COMENTARIO_VARIAS_LINEAS shift and go to state 17
    COMENTARIO_SIMPLE shift and go to state 18
    error           shift and go to state 19
    RPRINT          shift and go to state 20
    ID              shift and go to state 24
    RIF             shift and go to state 25
    RWHILE          shift and go to state 26
    RSWITCH         shift and go to state 27
    RFOR            shift and go to state 28
    RMAIN           shift and go to state 29
    RBREAK          shift and go to state 30
    RRETURN         shift and go to state 31
    RCONTINUE       shift and go to state 32
    RFUNC           shift and go to state 33
    RINT            shift and go to state 35
    RDOUBLE         shift and go to state 36
    RSTRING         shift and go to state 37
    RCHAR           shift and go to state 38
    RBOOLEAN        shift and go to state 39
    RVAR            shift and go to state 40

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    imprimir_                      shift and go to state 4
    declaracion_ins                shift and go to state 5
    incre_decre_ins                shift and go to state 6
    if_ins                         shift and go to state 7
    while_ins                      shift and go to state 8
    switch_ins                     shift and go to state 9
    for_ins                        shift and go to state 10
    main_ins                       shift and go to state 11
    break_ins                      shift and go to state 12
    return_ins                     shift and go to state 13
    continue_ins                   shift and go to state 14
    funcion_ins                    shift and go to state 15
    llamada_ins                    shift and go to state 16
    declaracion_                   shift and go to state 21
    declaracion_comp               shift and go to state 22
    asignacion_ins                 shift and go to state 23
    tipo_funcion                   shift and go to state 34

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . imprimir_ fin_instruccion
    (5) instruccion -> . declaracion_ins fin_instruccion
    (6) instruccion -> . incre_decre_ins fin_instruccion
    (7) instruccion -> . if_ins
    (8) instruccion -> . while_ins
    (9) instruccion -> . switch_ins
    (10) instruccion -> . for_ins
    (11) instruccion -> . main_ins
    (12) instruccion -> . break_ins fin_instruccion
    (13) instruccion -> . return_ins fin_instruccion
    (14) instruccion -> . continue_ins fin_instruccion
    (15) instruccion -> . funcion_ins
    (16) instruccion -> . llamada_ins fin_instruccion
    (17) instruccion -> . COMENTARIO_VARIAS_LINEAS
    (18) instruccion -> . COMENTARIO_SIMPLE
    (26) instruccion -> . error PUNTOCOMA
    (32) imprimir_ -> . RPRINT PARA expresion PARC
    (19) declaracion_ins -> . declaracion_
    (20) declaracion_ins -> . declaracion_comp
    (21) declaracion_ins -> . asignacion_ins
    (65) incre_decre_ins -> . ID INCREMENTO
    (66) incre_decre_ins -> . ID DECREMENTO
    (33) if_ins -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC
    (34) if_ins -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE LLAVEA instrucciones LLAVEC
    (35) if_ins -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE if_ins
    (43) while_ins -> . RWHILE PARA expresion PARC LLAVEA instrucciones LLAVEC
    (36) switch_ins -> . RSWITCH PARA expresion PARC LLAVEA case_switch_ins default_switch LLAVEC
    (37) switch_ins -> . RSWITCH PARA expresion PARC LLAVEA case_switch_ins LLAVEC
    (38) switch_ins -> . RSWITCH PARA expresion PARC LLAVEA default_switch LLAVEC
    (44) for_ins -> . RFOR PARA declaracion_for PUNTOCOMA expresion PUNTOCOMA asignacion_for PARC LLAVEA instrucciones LLAVEC
    (45) main_ins -> . RMAIN PARA PARC LLAVEA instrucciones LLAVEC
    (56) break_ins -> . RBREAK
    (57) return_ins -> . RRETURN expresion
    (58) continue_ins -> . RCONTINUE
    (46) funcion_ins -> . RFUNC ID PARA PARC LLAVEA instrucciones LLAVEC
    (47) funcion_ins -> . RFUNC ID PARA parametros PARC LLAVEA instrucciones LLAVEC
    (51) llamada_ins -> . ID PARA PARC
    (52) llamada_ins -> . ID PARA parametros_llamada PARC
    (29) declaracion_ -> . tipo_funcion ID
    (30) declaracion_comp -> . tipo_funcion ID IGUAL expresion
    (31) asignacion_ins -> . ID IGUAL expresion
    (59) tipo_funcion -> . RINT
    (60) tipo_funcion -> . RDOUBLE
    (61) tipo_funcion -> . RSTRING
    (62) tipo_funcion -> . RCHAR
    (63) tipo_funcion -> . RBOOLEAN
    (64) tipo_funcion -> . RVAR

    $end            reduce using rule 1 (init -> instrucciones .)
    COMENTARIO_VARIAS_LINEAS shift and go to state 17
    COMENTARIO_SIMPLE shift and go to state 18
    error           shift and go to state 19
    RPRINT          shift and go to state 20
    ID              shift and go to state 24
    RIF             shift and go to state 25
    RWHILE          shift and go to state 26
    RSWITCH         shift and go to state 27
    RFOR            shift and go to state 28
    RMAIN           shift and go to state 29
    RBREAK          shift and go to state 30
    RRETURN         shift and go to state 31
    RCONTINUE       shift and go to state 32
    RFUNC           shift and go to state 33
    RINT            shift and go to state 35
    RDOUBLE         shift and go to state 36
    RSTRING         shift and go to state 37
    RCHAR           shift and go to state 38
    RBOOLEAN        shift and go to state 39
    RVAR            shift and go to state 40

    instruccion                    shift and go to state 41
    imprimir_                      shift and go to state 4
    declaracion_ins                shift and go to state 5
    incre_decre_ins                shift and go to state 6
    if_ins                         shift and go to state 7
    while_ins                      shift and go to state 8
    switch_ins                     shift and go to state 9
    for_ins                        shift and go to state 10
    main_ins                       shift and go to state 11
    break_ins                      shift and go to state 12
    return_ins                     shift and go to state 13
    continue_ins                   shift and go to state 14
    funcion_ins                    shift and go to state 15
    llamada_ins                    shift and go to state 16
    declaracion_                   shift and go to state 21
    declaracion_comp               shift and go to state 22
    asignacion_ins                 shift and go to state 23
    tipo_funcion                   shift and go to state 34

state 3

    (3) instrucciones -> instruccion .

    COMENTARIO_VARIAS_LINEAS reduce using rule 3 (instrucciones -> instruccion .)
    COMENTARIO_SIMPLE reduce using rule 3 (instrucciones -> instruccion .)
    error           reduce using rule 3 (instrucciones -> instruccion .)
    RPRINT          reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    RIF             reduce using rule 3 (instrucciones -> instruccion .)
    RWHILE          reduce using rule 3 (instrucciones -> instruccion .)
    RSWITCH         reduce using rule 3 (instrucciones -> instruccion .)
    RFOR            reduce using rule 3 (instrucciones -> instruccion .)
    RMAIN           reduce using rule 3 (instrucciones -> instruccion .)
    RBREAK          reduce using rule 3 (instrucciones -> instruccion .)
    RRETURN         reduce using rule 3 (instrucciones -> instruccion .)
    RCONTINUE       reduce using rule 3 (instrucciones -> instruccion .)
    RFUNC           reduce using rule 3 (instrucciones -> instruccion .)
    RINT            reduce using rule 3 (instrucciones -> instruccion .)
    RDOUBLE         reduce using rule 3 (instrucciones -> instruccion .)
    RSTRING         reduce using rule 3 (instrucciones -> instruccion .)
    RCHAR           reduce using rule 3 (instrucciones -> instruccion .)
    RBOOLEAN        reduce using rule 3 (instrucciones -> instruccion .)
    RVAR            reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    LLAVEC          reduce using rule 3 (instrucciones -> instruccion .)
    RDEFAULT        reduce using rule 3 (instrucciones -> instruccion .)
    RCASE           reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> imprimir_ . fin_instruccion
    (27) fin_instruccion -> . PUNTOCOMA
    (28) fin_instruccion -> .

    PUNTOCOMA       shift and go to state 43
    COMENTARIO_VARIAS_LINEAS reduce using rule 28 (fin_instruccion -> .)
    COMENTARIO_SIMPLE reduce using rule 28 (fin_instruccion -> .)
    error           reduce using rule 28 (fin_instruccion -> .)
    RPRINT          reduce using rule 28 (fin_instruccion -> .)
    ID              reduce using rule 28 (fin_instruccion -> .)
    RIF             reduce using rule 28 (fin_instruccion -> .)
    RWHILE          reduce using rule 28 (fin_instruccion -> .)
    RSWITCH         reduce using rule 28 (fin_instruccion -> .)
    RFOR            reduce using rule 28 (fin_instruccion -> .)
    RMAIN           reduce using rule 28 (fin_instruccion -> .)
    RBREAK          reduce using rule 28 (fin_instruccion -> .)
    RRETURN         reduce using rule 28 (fin_instruccion -> .)
    RCONTINUE       reduce using rule 28 (fin_instruccion -> .)
    RFUNC           reduce using rule 28 (fin_instruccion -> .)
    RINT            reduce using rule 28 (fin_instruccion -> .)
    RDOUBLE         reduce using rule 28 (fin_instruccion -> .)
    RSTRING         reduce using rule 28 (fin_instruccion -> .)
    RCHAR           reduce using rule 28 (fin_instruccion -> .)
    RBOOLEAN        reduce using rule 28 (fin_instruccion -> .)
    RVAR            reduce using rule 28 (fin_instruccion -> .)
    $end            reduce using rule 28 (fin_instruccion -> .)
    LLAVEC          reduce using rule 28 (fin_instruccion -> .)
    RDEFAULT        reduce using rule 28 (fin_instruccion -> .)
    RCASE           reduce using rule 28 (fin_instruccion -> .)

    fin_instruccion                shift and go to state 42

state 5

    (5) instruccion -> declaracion_ins . fin_instruccion
    (27) fin_instruccion -> . PUNTOCOMA
    (28) fin_instruccion -> .

    PUNTOCOMA       shift and go to state 43
    COMENTARIO_VARIAS_LINEAS reduce using rule 28 (fin_instruccion -> .)
    COMENTARIO_SIMPLE reduce using rule 28 (fin_instruccion -> .)
    error           reduce using rule 28 (fin_instruccion -> .)
    RPRINT          reduce using rule 28 (fin_instruccion -> .)
    ID              reduce using rule 28 (fin_instruccion -> .)
    RIF             reduce using rule 28 (fin_instruccion -> .)
    RWHILE          reduce using rule 28 (fin_instruccion -> .)
    RSWITCH         reduce using rule 28 (fin_instruccion -> .)
    RFOR            reduce using rule 28 (fin_instruccion -> .)
    RMAIN           reduce using rule 28 (fin_instruccion -> .)
    RBREAK          reduce using rule 28 (fin_instruccion -> .)
    RRETURN         reduce using rule 28 (fin_instruccion -> .)
    RCONTINUE       reduce using rule 28 (fin_instruccion -> .)
    RFUNC           reduce using rule 28 (fin_instruccion -> .)
    RINT            reduce using rule 28 (fin_instruccion -> .)
    RDOUBLE         reduce using rule 28 (fin_instruccion -> .)
    RSTRING         reduce using rule 28 (fin_instruccion -> .)
    RCHAR           reduce using rule 28 (fin_instruccion -> .)
    RBOOLEAN        reduce using rule 28 (fin_instruccion -> .)
    RVAR            reduce using rule 28 (fin_instruccion -> .)
    $end            reduce using rule 28 (fin_instruccion -> .)
    LLAVEC          reduce using rule 28 (fin_instruccion -> .)
    RDEFAULT        reduce using rule 28 (fin_instruccion -> .)
    RCASE           reduce using rule 28 (fin_instruccion -> .)

    fin_instruccion                shift and go to state 44

state 6

    (6) instruccion -> incre_decre_ins . fin_instruccion
    (27) fin_instruccion -> . PUNTOCOMA
    (28) fin_instruccion -> .

    PUNTOCOMA       shift and go to state 43
    COMENTARIO_VARIAS_LINEAS reduce using rule 28 (fin_instruccion -> .)
    COMENTARIO_SIMPLE reduce using rule 28 (fin_instruccion -> .)
    error           reduce using rule 28 (fin_instruccion -> .)
    RPRINT          reduce using rule 28 (fin_instruccion -> .)
    ID              reduce using rule 28 (fin_instruccion -> .)
    RIF             reduce using rule 28 (fin_instruccion -> .)
    RWHILE          reduce using rule 28 (fin_instruccion -> .)
    RSWITCH         reduce using rule 28 (fin_instruccion -> .)
    RFOR            reduce using rule 28 (fin_instruccion -> .)
    RMAIN           reduce using rule 28 (fin_instruccion -> .)
    RBREAK          reduce using rule 28 (fin_instruccion -> .)
    RRETURN         reduce using rule 28 (fin_instruccion -> .)
    RCONTINUE       reduce using rule 28 (fin_instruccion -> .)
    RFUNC           reduce using rule 28 (fin_instruccion -> .)
    RINT            reduce using rule 28 (fin_instruccion -> .)
    RDOUBLE         reduce using rule 28 (fin_instruccion -> .)
    RSTRING         reduce using rule 28 (fin_instruccion -> .)
    RCHAR           reduce using rule 28 (fin_instruccion -> .)
    RBOOLEAN        reduce using rule 28 (fin_instruccion -> .)
    RVAR            reduce using rule 28 (fin_instruccion -> .)
    $end            reduce using rule 28 (fin_instruccion -> .)
    LLAVEC          reduce using rule 28 (fin_instruccion -> .)
    RDEFAULT        reduce using rule 28 (fin_instruccion -> .)
    RCASE           reduce using rule 28 (fin_instruccion -> .)

    fin_instruccion                shift and go to state 45

state 7

    (7) instruccion -> if_ins .

    COMENTARIO_VARIAS_LINEAS reduce using rule 7 (instruccion -> if_ins .)
    COMENTARIO_SIMPLE reduce using rule 7 (instruccion -> if_ins .)
    error           reduce using rule 7 (instruccion -> if_ins .)
    RPRINT          reduce using rule 7 (instruccion -> if_ins .)
    ID              reduce using rule 7 (instruccion -> if_ins .)
    RIF             reduce using rule 7 (instruccion -> if_ins .)
    RWHILE          reduce using rule 7 (instruccion -> if_ins .)
    RSWITCH         reduce using rule 7 (instruccion -> if_ins .)
    RFOR            reduce using rule 7 (instruccion -> if_ins .)
    RMAIN           reduce using rule 7 (instruccion -> if_ins .)
    RBREAK          reduce using rule 7 (instruccion -> if_ins .)
    RRETURN         reduce using rule 7 (instruccion -> if_ins .)
    RCONTINUE       reduce using rule 7 (instruccion -> if_ins .)
    RFUNC           reduce using rule 7 (instruccion -> if_ins .)
    RINT            reduce using rule 7 (instruccion -> if_ins .)
    RDOUBLE         reduce using rule 7 (instruccion -> if_ins .)
    RSTRING         reduce using rule 7 (instruccion -> if_ins .)
    RCHAR           reduce using rule 7 (instruccion -> if_ins .)
    RBOOLEAN        reduce using rule 7 (instruccion -> if_ins .)
    RVAR            reduce using rule 7 (instruccion -> if_ins .)
    $end            reduce using rule 7 (instruccion -> if_ins .)
    LLAVEC          reduce using rule 7 (instruccion -> if_ins .)
    RDEFAULT        reduce using rule 7 (instruccion -> if_ins .)
    RCASE           reduce using rule 7 (instruccion -> if_ins .)


state 8

    (8) instruccion -> while_ins .

    COMENTARIO_VARIAS_LINEAS reduce using rule 8 (instruccion -> while_ins .)
    COMENTARIO_SIMPLE reduce using rule 8 (instruccion -> while_ins .)
    error           reduce using rule 8 (instruccion -> while_ins .)
    RPRINT          reduce using rule 8 (instruccion -> while_ins .)
    ID              reduce using rule 8 (instruccion -> while_ins .)
    RIF             reduce using rule 8 (instruccion -> while_ins .)
    RWHILE          reduce using rule 8 (instruccion -> while_ins .)
    RSWITCH         reduce using rule 8 (instruccion -> while_ins .)
    RFOR            reduce using rule 8 (instruccion -> while_ins .)
    RMAIN           reduce using rule 8 (instruccion -> while_ins .)
    RBREAK          reduce using rule 8 (instruccion -> while_ins .)
    RRETURN         reduce using rule 8 (instruccion -> while_ins .)
    RCONTINUE       reduce using rule 8 (instruccion -> while_ins .)
    RFUNC           reduce using rule 8 (instruccion -> while_ins .)
    RINT            reduce using rule 8 (instruccion -> while_ins .)
    RDOUBLE         reduce using rule 8 (instruccion -> while_ins .)
    RSTRING         reduce using rule 8 (instruccion -> while_ins .)
    RCHAR           reduce using rule 8 (instruccion -> while_ins .)
    RBOOLEAN        reduce using rule 8 (instruccion -> while_ins .)
    RVAR            reduce using rule 8 (instruccion -> while_ins .)
    $end            reduce using rule 8 (instruccion -> while_ins .)
    LLAVEC          reduce using rule 8 (instruccion -> while_ins .)
    RDEFAULT        reduce using rule 8 (instruccion -> while_ins .)
    RCASE           reduce using rule 8 (instruccion -> while_ins .)


state 9

    (9) instruccion -> switch_ins .

    COMENTARIO_VARIAS_LINEAS reduce using rule 9 (instruccion -> switch_ins .)
    COMENTARIO_SIMPLE reduce using rule 9 (instruccion -> switch_ins .)
    error           reduce using rule 9 (instruccion -> switch_ins .)
    RPRINT          reduce using rule 9 (instruccion -> switch_ins .)
    ID              reduce using rule 9 (instruccion -> switch_ins .)
    RIF             reduce using rule 9 (instruccion -> switch_ins .)
    RWHILE          reduce using rule 9 (instruccion -> switch_ins .)
    RSWITCH         reduce using rule 9 (instruccion -> switch_ins .)
    RFOR            reduce using rule 9 (instruccion -> switch_ins .)
    RMAIN           reduce using rule 9 (instruccion -> switch_ins .)
    RBREAK          reduce using rule 9 (instruccion -> switch_ins .)
    RRETURN         reduce using rule 9 (instruccion -> switch_ins .)
    RCONTINUE       reduce using rule 9 (instruccion -> switch_ins .)
    RFUNC           reduce using rule 9 (instruccion -> switch_ins .)
    RINT            reduce using rule 9 (instruccion -> switch_ins .)
    RDOUBLE         reduce using rule 9 (instruccion -> switch_ins .)
    RSTRING         reduce using rule 9 (instruccion -> switch_ins .)
    RCHAR           reduce using rule 9 (instruccion -> switch_ins .)
    RBOOLEAN        reduce using rule 9 (instruccion -> switch_ins .)
    RVAR            reduce using rule 9 (instruccion -> switch_ins .)
    $end            reduce using rule 9 (instruccion -> switch_ins .)
    LLAVEC          reduce using rule 9 (instruccion -> switch_ins .)
    RDEFAULT        reduce using rule 9 (instruccion -> switch_ins .)
    RCASE           reduce using rule 9 (instruccion -> switch_ins .)


state 10

    (10) instruccion -> for_ins .

    COMENTARIO_VARIAS_LINEAS reduce using rule 10 (instruccion -> for_ins .)
    COMENTARIO_SIMPLE reduce using rule 10 (instruccion -> for_ins .)
    error           reduce using rule 10 (instruccion -> for_ins .)
    RPRINT          reduce using rule 10 (instruccion -> for_ins .)
    ID              reduce using rule 10 (instruccion -> for_ins .)
    RIF             reduce using rule 10 (instruccion -> for_ins .)
    RWHILE          reduce using rule 10 (instruccion -> for_ins .)
    RSWITCH         reduce using rule 10 (instruccion -> for_ins .)
    RFOR            reduce using rule 10 (instruccion -> for_ins .)
    RMAIN           reduce using rule 10 (instruccion -> for_ins .)
    RBREAK          reduce using rule 10 (instruccion -> for_ins .)
    RRETURN         reduce using rule 10 (instruccion -> for_ins .)
    RCONTINUE       reduce using rule 10 (instruccion -> for_ins .)
    RFUNC           reduce using rule 10 (instruccion -> for_ins .)
    RINT            reduce using rule 10 (instruccion -> for_ins .)
    RDOUBLE         reduce using rule 10 (instruccion -> for_ins .)
    RSTRING         reduce using rule 10 (instruccion -> for_ins .)
    RCHAR           reduce using rule 10 (instruccion -> for_ins .)
    RBOOLEAN        reduce using rule 10 (instruccion -> for_ins .)
    RVAR            reduce using rule 10 (instruccion -> for_ins .)
    $end            reduce using rule 10 (instruccion -> for_ins .)
    LLAVEC          reduce using rule 10 (instruccion -> for_ins .)
    RDEFAULT        reduce using rule 10 (instruccion -> for_ins .)
    RCASE           reduce using rule 10 (instruccion -> for_ins .)


state 11

    (11) instruccion -> main_ins .
